--- a/productList.html
+++ b/productList.html
@@ -1,110 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
- <title>銀河電腦城 | 產品目錄</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+    <title>銀河電腦城 | 產品目錄</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    />
 
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+  </head>
 
-</head>
+  <body>
+    <!-- 導航列 -->
 
-<body>
-  <!-- 導航列 -->
-
-  <header class="sticky-top">
-    <!-- collapse container -->
-    <div class="container container-fluid" id="collapseCon">
-      <h1 class="nav_h1" style="font-size: 30px">
-        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
-      </h1>
-      <div>
-        <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="40" /><span
-            class="cart-count-col">0</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="fa fa-bars"></span>
-        </button>
+    <header class="sticky-top">
+      <!-- collapse container -->
+      <div class="container container-fluid" id="collapseCon">
+        <h1 class="nav_h1" style="font-size: 30px">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <div>
+          <a href="cartPage.html" class="cart-icon"
+            ><img src="./img/shoppingCart.png" height="40" /><span
+              class="cart-count-col"
+              >0</span
+            ></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
       </div>
-    </div>
 
-    <!-- normal container -->
-    <div class="container" id="normalCon">
-      <h1 class="nav_h1">
-        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
-      </h1>
-      <nav>
+      <!-- normal container -->
+      <div class="container" id="normalCon">
+        <h1 class="nav_h1">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">主頁</a></li>
+            <li><a href="productList.html">產品目錄</a></li>
+            <li><a href="builder.html">自選砌機報價</a></li>
+            <li><a href="about.html">關於我們</a></li>
+            <li>
+              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+            </li>
+            <li>
+              <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="50" /><span
+                  class="cart-count"
+                  >0</span
+                ></a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- 導航列extent -->
+      <div class="collapse colbar" id="navbarToggleExternalContent">
         <ul>
           <li><a href="index.html">主頁</a></li>
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
           <li>
-            <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-          </li>
-          <li>
-            <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
-                class="cart-count">0</span></a>
+            <a href="login.html">登入</a> |
+            <a href="register.html">註冊</a>
           </li>
         </ul>
-      </nav>
-    </div>
-    <!-- 導航列extent -->
-    <div class="collapse colbar" id="navbarToggleExternalContent">
-      <ul>
-        <li><a href="index.html">主頁</a></li>
-        <li><a href="productList.html">產品目錄</a></li>
-        <li><a href="builder.html">自選砌機報價</a></li>
-        <li><a href="about.html">關於我們</a></li>
-        <li>
-          <a href="login.html">登入</a> |
-          <a href="register.html">註冊</a>
-        </li>
-      </ul>
-    </div>
-    <!-- 導航列end extent -->
-  </header>
-  <!-- 導航列end -->
-  <main>
-    <div class="main-flex">
-      <!-- 側邊欄 -->
-      <aside class="sidebar">
-        <ul id="categoryList">
-          <li class="active" data-category="全部商品">全部商品</li>
-          <li>中央處理器</li>
-          <li>顯示卡</li>
-          <li>記憶體 (RAM)</li>
-          <li>儲存裝置</li>
-          <li>主機板</li>
-          <li>電腦散熱</li>
-          <li>電源</li>
-          <li>機箱</li>
-          <li>手提電腦</li>
-        </ul>
-      </aside>
-      <!-- 內容區 -->
-      <section id="productPanel"></section>
-      <div class="confirmTips">
-        <div class="confirmTips-content">
-          <div>產品已加入購物車！</div>
-          <button id="closeConfirmBtn">關閉</button>
+      </div>
+      <!-- 導航列end extent -->
+    </header>
+    <!-- 導航列end -->
+    <main>
+      <div class="main-flex">
+        <!-- 側邊欄 -->
+        <aside class="sidebar">
+          <ul id="categoryList">
+            <li class="active" data-category="全部商品">全部商品</li>
+            <li>中央處理器</li>
+            <li>顯示卡</li>
+            <li>記憶體 (RAM)</li>
+            <li>儲存裝置</li>
+            <li>主機板</li>
+            <li>電腦散熱</li>
+            <li>電源</li>
+            <li>機箱</li>
+            <li>手提電腦</li>
+          </ul>
+        </aside>
+        <!-- 內容區 -->
+        <section id="productPanel"></section>
+        <div class="confirmTips">
+          <div class="confirmTips-content">
+            <div>產品已加入購物車！</div>
+            <button id="closeConfirmBtn">關閉</button>
+          </div>
         </div>
       </div>
-  </main>
+    </main>
 
-  <!-- 頁尾  -->
+    <!-- 頁尾  -->
     <div style="background-color: rgb(240, 235, 235)">
       <div class="container py-4">
         <div class="row">
@@ -142,14 +166,15 @@
         </div>
       </div>
     </div>
-  <footer>
-    <div class="container">© 2025 銀河電腦城．版權所有</div>
-  </footer>
+    <footer>
+      <div class="container">© 2025 銀河電腦城．版權所有</div>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
-  <script src="productListScript.js"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+    <script src="productListScript.js"></script>
+  </body>
 </html>
