--- a/cartPage.html
+++ b/cartPage.html
@@ -131,10 +131,10 @@
     <!-- 導航列end -->
     <main>
       <div class="cartTips">購物車內尚未有任何商品!</div>
-      <div class="cartPaymentPanel" style="margin: 0 3vw;display:none">
+      <div class="cartPaymentPanel" style="margin: 0 3vw; display: none">
         <div id="cartPanel"></div>
         <div class="row justify-content-end">
-          <span class="cartPaymentPrice col-2">總計: $0</span>
+          <span class="col-2">產品總計:HK$<span class="cartPaymentPrice">0</span></span>
           <button
             class="btn btn-warning col-2"
             id="clearCartBtn"
@@ -147,18 +147,18 @@
           <strong>運送選項</strong><i class="bi bi-file-arrow-down-fill"></i>
         </h4>
         <div id="del-container" class="row" style="margin: 0vw; gap: 1vw">
-          <div class="delbox" style="width: 30vw; padding: 1em 0em">
+          <div class="delbox" style="width: 30vw; padding: 1em 0em" onclick="chooseTravelMethod(18)">
             <h5><b>免費運送</b></h5>
             <span>1-5個工作天</span><br />
             <span>砌機: 3-5個工作天</span><br />
             <span>HK$18</span>
           </div>
-          <div class="delbox" style="width: 30vw; padding: 1em 0em">
+          <div class="delbox" style="width: 30vw; padding: 1em 0em" onclick="chooseTravelMethod(86)">
             <h5><b>特快運送</b></h5>
             <span>即日 (現貨訂單, 2PM 截單)/1個工作天</span><br />
             <span>HK$86</span>
           </div>
-          <div class="delbox" style="width: 30vw; padding: 1em 0em">
+          <div class="delbox" style="width: 30vw; padding: 1em 0em" onclick="chooseTravelMethod(0)">
             <h5><b>門巿自取</b></h5>
             <span>1-5個工作天</span><br />
             <span>砌機: 3-5個工作天</span>
@@ -288,9 +288,11 @@
           </div>
         </form>
         <span
-          >產品總額 : $<span>198</span> 附加費 : $<span>18</span> 總計 : $<span
-            >216</span
-          ></span
+          >產品總額 : $<span class="beforeFeePrice">0</span> 附加費 : $<span
+            class="additionFee"
+            >0</span
+          >
+          總計 : HK$<span class="totalPaymentPrice">0</span></span
         >
         <button class="btn btn-primary" onclick="handlePayment()">付款</button>
       </div>
