--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <!-- 輪播 卡片-->
+        <!-- 輪播 卡片 大螢幕-->
         <div style="margin: 0px; width: 75%">
           <div
             id="randomCarousel"
@@ -466,6 +466,7 @@
           </div>
         </div>
 
+        <!-- 輪播 卡片 小螢幕-->
         <div style="margin: 0px; width: 75%">
           <div
             id="randomCarousel"
